# pet_project-ParserHH

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: interface.py  mixin.py  vacancy.py
src/model_db/: database.py  models.py  postgres.py
src/model_hh/: abc_hh.py  get_data.py  main_hh.py
src/view/: com_str.py
