[tool.poetry]
name = "pet-project-parser-vacansies"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.testing.dependencies]
pytest = "^8.0.1"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.main_package.dependencies]
requests = "^2.31.0"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

