[tool.poetry]
name = "pet-project-parser-vacansies"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.testing.dependencies]
pytest-cov = "^4.1.0"


[tool.poetry.group.main_package.dependencies]
requests = "^2.31.0"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.27"
sqlalchemy-utils = "^0.41.1"
bs4 = "^0.0.2"
lxml = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

